Fixes TCGA chart which is not centered

--- a/app/d3/pandrugs.css
+++ b/app/d3/pandrugs.css
@@ -36,7 +36,7 @@ body {
 .g-content {
   position: relative;
   font: 11px sans-serif;
-  width: 1230px;
+  width: 1770px;
   margin:auto;
   /*height: 1600px;*/
 }
